# DeLA

./: pyproject.toml  requirements.txt
S3DIS/: config.py  delasemseg.py  prepare_s3dis.py  s3dis.py  test.py  train.py
ShapeNetPart/: config.py  delapartseg.py  shapenetpart.py  train.py
utils/: __init__.py  furthest_point_sample.py  grid_subsampling.py  knn_edge_maxpooling.py  overall_accuracy.py  show_data.py  util.py
