[project]
name = "dela"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6.0",
    "numpy>=2.2.3",
    "torch-geometric>=2.7.0",
    # Faster versions of common operations
    "torch-cluster>=1.6.3",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
    "torch-fpsample",
    "torch-voxel-subsample",
    "pynanoflann>=0.0.9",
    # Logging, tracking, & TUI
    "torchmetrics>=1.6.1",
    "lightning>=2.5.0",
    "aim>=3.27.0",
    "click>=8.1.8",
    "tqdm>=4.67.1",
    "rich>=13.9.4",
    "polyscope>=2.3.0",
    # Extras (maybe unnecessary?)
    "pandas>=2.2.3",
    "tabulate>=0.9.0",
    "natsort>=8.4.0",
    "gdown>=5.2.0",
    "hatchling>=1.27.0",
    "editables>=0.5",
    "optuna>=4.2.1",
]


[tool.uv]
no-build-isolation-package = [
    # These depend on torch
    "torch-cluster",
    "torch-scatter",
    "torch-sparse",
    "torch-fpsample",
    # This depends on pybind11
    "pynanoflann",
]

[tool.uv.sources]
torch-voxel-subsample = { git = "https://github.com/JacksonCampolattaro/torch-voxel-subsample" }
pynanoflann = { git = "https://github.com/u1234x1234/pynanoflann.git" }
torch-geometric = { git = "https://github.com/JacksonCampolattaro/pytorch_geometric.git", branch = "source-index" }
torch-fpsample = { git = "https://github.com/leonardodalinky/pytorch_fpsample" }